---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: ????
  Changes:
    - Completely refactored how default configs are stored/created
  Bugfixes:
    - Fixed the possibility for the menu to be created twice
    - Fixed the chance for functions to accidentally be called twice when using the internal 'tick_later' function (tick 0)
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2024-06-28
  Compatibility:
    - Fixed compatibility for Pyanodons Alternative Energy
      * Made the machine an ingredient rather than the category
    - Added compatibility for Pyanodons Hard Mode
    - Added compatibility for Space Exploration
      * Haven't added 'recipes' to properly handle off-planet resources.
  Commands:
    - Added a debug command for recursively seeking through invalid items in hopes of finding the cause
      Currently not that helpful due to it searching *every* recipe. It's better to just do it manually :(
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2024-06-26
  Bugfixes:
    - Nullius now has injected recipes to match the asteroid mining drones.
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2024-06-26
  Bugfixes:
    - ACTUALLY TEST THE NEW SETTING :facepalm:
    - Actually add locale for new setting
    - Actually recalculate when new setting is changed
    - Reprocess data when new setting is changed
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2024-06-26
  Features:
    - Added setting to disable considering autplace controls. Now mods that have higher tier resources on other surfaces can kind of work. 
  Compatibility:
    - Added compatibility for Nullius
  Bugfixes: