@@ -2,44 +2,44 @@ return function ()
 	return {
 		name = {"tiergen-config.msp"},
 		ultimate_science = lib.item("space-science-pack"),
-		all_sciences = {
-			lib.item("automation-science-pack"),
-			lib.item("logistic-science-pack"),
-			lib.item("military-science-pack"),
-			lib.item("chemical-science-pack"),
-			lib.item("production-science-pack"),
-			lib.item("utility-science-pack"),
-			lib.item("space-science-pack"),
-			lib.item("more-science-pack-1"),
-			lib.item("more-science-pack-2"),
-			lib.item("more-science-pack-3"),
-			lib.item("more-science-pack-4"),
-			lib.item("more-science-pack-5"),
-			lib.item("more-science-pack-6"),
-			lib.item("more-science-pack-7"),
-			lib.item("more-science-pack-8"),
-			lib.item("more-science-pack-9"),
-			lib.item("more-science-pack-10"),
-			lib.item("more-science-pack-11"),
-			lib.item("more-science-pack-12"),
-			lib.item("more-science-pack-13"),
-			lib.item("more-science-pack-14"),
-			lib.item("more-science-pack-15"),
-			lib.item("more-science-pack-16"),
-			lib.item("more-science-pack-17"),
-			lib.item("more-science-pack-18"),
-			lib.item("more-science-pack-19"),
-			lib.item("more-science-pack-20"),
-			lib.item("more-science-pack-21"),
-			lib.item("more-science-pack-22"),
-			lib.item("more-science-pack-23"),
-			lib.item("more-science-pack-24"),
-			lib.item("more-science-pack-25"),
-			lib.item("more-science-pack-26"),
-			lib.item("more-science-pack-27"),
-			lib.item("more-science-pack-28"),
-			lib.item("more-science-pack-29"),
-			lib.item("more-science-pack-30"),
+		all_sciences = lib.items{
+			"automation-science-pack",
+			"logistic-science-pack",
+			"military-science-pack",
+			"chemical-science-pack",
+			"production-science-pack",
+			"utility-science-pack",
+			"space-science-pack",
+			"more-science-pack-1",
+			"more-science-pack-2",
+			"more-science-pack-3",
+			"more-science-pack-4",
+			"more-science-pack-5",
+			"more-science-pack-6",
+			"more-science-pack-7",
+			"more-science-pack-8",
+			"more-science-pack-9",
+			"more-science-pack-10",
+			"more-science-pack-11",
+			"more-science-pack-12",
+			"more-science-pack-13",
+			"more-science-pack-14",
+			"more-science-pack-15",
+			"more-science-pack-16",
+			"more-science-pack-17",
+			"more-science-pack-18",
+			"more-science-pack-19",
+			"more-science-pack-20",
+			"more-science-pack-21",
+			"more-science-pack-22",
+			"more-science-pack-23",
+			"more-science-pack-24",
+			"more-science-pack-25",
+			"more-science-pack-26",
+			"more-science-pack-27",
+			"more-science-pack-28",
+			"more-science-pack-29",
+			"more-science-pack-30",
 		},
 		base_items = {},
 		ignored_recipes = {},
