@@ -19,41 +19,41 @@ return function ()
 	return {
 		-- ultimate_science = lib.item("nullius-astronomy-pack"),
 		ultimate_science = lib.item("nullius-zoology-pack"),
-		all_sciences = {
+		all_sciences = lib.items{
 			-- Regular sciences
-			lib.item("nullius-geology-pack"),
-			lib.item("nullius-climatology-pack"),
-			lib.item("nullius-mechanical-pack"),
-			lib.item("nullius-electrical-pack"),
-			lib.item("nullius-chemical-pack"),
-			lib.item("nullius-physics-pack"),
-			lib.item("nullius-astronomy-pack"),
+			"nullius-geology-pack",
+			"nullius-climatology-pack",
+			"nullius-mechanical-pack",
+			"nullius-electrical-pack",
+			"nullius-chemical-pack",
+			"nullius-physics-pack",
+			"nullius-astronomy-pack",
 	
 			-- Biology Sciences
-			lib.item("nullius-biochemistry-pack"),
-			lib.item("nullius-microbiology-pack"),
-			lib.item("nullius-botany-pack"),
-			lib.item("nullius-dendrology-pack"),
-			lib.item("nullius-nematology-pack"),
-			lib.item("nullius-ichthyology-pack"),
-			lib.item("nullius-zoology-pack"),
+			"nullius-biochemistry-pack",
+			"nullius-microbiology-pack",
+			"nullius-botany-pack",
+			"nullius-dendrology-pack",
+			"nullius-nematology-pack",
+			"nullius-ichthyology-pack",
+			"nullius-zoology-pack",
 		},
-		base_items = {
+		base_items = lib.items{
 			-- Given items
-			lib.item("nullius-chemical-plant-1"),
-			lib.item("nullius-distillery-1"),
-			lib.item("nullius-hydro-plant-1"),
-			lib.item("nullius-foundry-1"),
-			lib.item("nullius-air-filter-1"),
-			lib.item("nullius-seawater-intake-1"),
-			lib.item("nullius-medium-assembler-1"),
-			lib.item("nullius-small-furnace-2"), -- 2??
-			lib.item("nullius-broken-electrolyzer"),
+			"nullius-chemical-plant-1",
+			"nullius-distillery-1",
+			"nullius-hydro-plant-1",
+			"nullius-foundry-1",
+			"nullius-air-filter-1",
+			"nullius-seawater-intake-1",
+			"nullius-medium-assembler-1",
+			"nullius-small-furnace-2", -- 2??
+			"nullius-broken-electrolyzer",
 	
 			--For checkpoint sciences
-			lib.item("nullius-checkpoint"),
-			lib.item("nullius-requirement-build"),
-			lib.item("nullius-requirement-consume"),
+			"nullius-checkpoint",
+			"nullius-requirement-build",
+			"nullius-requirement-consume",
 		},
 		ignored_recipes = {},
 		injected_recipes = {
