@@ -18,42 +18,42 @@ return function ()
 	return {
 		name = {"tiergen-config.se"},
 		ultimate_science = lib.item("se-deep-space-science-pack-4"),
-		all_sciences = {
+		all_sciences = lib.items{
 			-- Basic research
-			lib.item("automation-science-pack"),
-			lib.item("logistic-science-pack"),
-			lib.item("military-science-pack"),
-			lib.item("chemical-science-pack"),
-			lib.item("se-rocket-science-pack"),
-			lib.item("space-science-pack"),
-			lib.item("utility-science-pack"),
-			lib.item("production-science-pack"),
+			"automation-science-pack",
+			"logistic-science-pack",
+			"military-science-pack",
+			"chemical-science-pack",
+			"se-rocket-science-pack",
+			"space-science-pack",
+			"utility-science-pack",
+			"production-science-pack",
 
 			-- advanced research
-			lib.item("se-astronomic-science-pack-1"),
-			lib.item("se-astronomic-science-pack-2"),
-			lib.item("se-astronomic-science-pack-3"),
-			lib.item("se-astronomic-science-pack-4"),
+			"se-astronomic-science-pack-1",
+			"se-astronomic-science-pack-2",
+			"se-astronomic-science-pack-3",
+			"se-astronomic-science-pack-4",
 
-			lib.item("se-biological-science-pack-1"),
-			lib.item("se-biological-science-pack-2"),
-			lib.item("se-biological-science-pack-3"),
-			lib.item("se-biological-science-pack-4"),
+			"se-biological-science-pack-1",
+			"se-biological-science-pack-2",
+			"se-biological-science-pack-3",
+			"se-biological-science-pack-4",
 
-			lib.item("se-energy-science-pack-1"),
-			lib.item("se-energy-science-pack-2"),
-			lib.item("se-energy-science-pack-3"),
-			lib.item("se-energy-science-pack-4"),
+			"se-energy-science-pack-1",
+			"se-energy-science-pack-2",
+			"se-energy-science-pack-3",
+			"se-energy-science-pack-4",
 
-			lib.item("se-material-science-pack-1"),
-			lib.item("se-material-science-pack-2"),
-			lib.item("se-material-science-pack-3"),
-			lib.item("se-material-science-pack-4"),
+			"se-material-science-pack-1",
+			"se-material-science-pack-2",
+			"se-material-science-pack-3",
+			"se-material-science-pack-4",
 
-			lib.item("se-deep-space-science-pack-1"),
-			lib.item("se-deep-space-science-pack-2"),
-			lib.item("se-deep-space-science-pack-3"),
-			lib.item("se-deep-space-science-pack-4"),
+			"se-deep-space-science-pack-1",
+			"se-deep-space-science-pack-2",
+			"se-deep-space-science-pack-3",
+			"se-deep-space-science-pack-4",
 		},
 		base_items = {},
 		ignored_recipes = {},
